--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -63,7 +63,7 @@
               <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenInclude">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableInclude ui-sortable">
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-selector pmx-selector--readonly">
@@ -77,11 +77,11 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-selector pmx-selector--readonly">
@@ -95,7 +95,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -123,7 +123,7 @@
               <div class="itemBox itemBox--children JS_multiSelector__box--selectionChildrenExclude">
                 <div class="itemBoxTable">
                   <div class="itemBoxBody itemBoxBody--sortableConnected itemBoxBody--sortableExclude ui-sortable">
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-selector pmx-selector--readonly">
@@ -137,11 +137,11 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
-                    <ul class="itemBoxTable__bodyRow">
+                    <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner">
                           <div class="pmx-selector pmx-selector--readonly">
@@ -155,7 +155,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -213,7 +213,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -255,7 +255,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -296,7 +296,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
@@ -338,7 +338,7 @@
                       </li>
                       <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
                         <div class="itemBoxTable__bodyCellInner">
-                          <i class="itemBoxTable__action JS_itemBoxTable__action--removeAll itemBoxTable__action--remove">—</i>
+                          <i class="itemBoxTable__action  itemBoxTable__action--remove">—</i>
                         </div>
                       </li>
                     </ul>
