Incl-Excl toggle JS class moved to toggle htmls

--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -231,7 +231,7 @@
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                         {% include blocks/popup/ms-included-toggle.html %}
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -253,7 +253,7 @@
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                         {% include blocks/popup/ms-included-toggle.html %}
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -278,7 +278,7 @@
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                         {% include blocks/popup/ms-excluded-toggle.html %}
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
@@ -303,7 +303,7 @@
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                     {% include blocks/popup/ms-excluded-toggle.html %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
