--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -108,7 +108,7 @@
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell JS_itemBoxTable__bodyRow--closed">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                     {% include blocks/popup/ms-included-toggle.html %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -129,7 +129,7 @@
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell JS_itemBoxTable__bodyRow--closed">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                     {% include blocks/popup/ms-included-toggle.html %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -150,7 +150,7 @@
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell JS_itemBoxTable__bodyRow--closed">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                     {% include blocks/popup/ms-excluded-toggle.html %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -171,7 +171,7 @@
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell JS_itemBoxTable__bodyRow--closed">
                 <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                  <div class="itemBoxTable__bodyCellInner ">
                     {% include blocks/popup/ms-excluded-toggle.html %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
