--- a/_includes/blocks/popup/ms-included-toggle.html
+++ b/_includes/blocks/popup/ms-included-toggle.html
@@ -1,4 +1,4 @@
-<div class="pmx-selector">
+<div class="pmx-selector JS_itemBoxTable__bodyCellInner--inclexcltoggle">
   <div class="pmx-selector__item pmx-selector__item--selected">
     <div class="pmx-selector__block">
       <span class="pmx-selector__blockPart pmx-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
