--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -200,7 +200,7 @@
                   <div class="itemBoxBody">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                        <div class="itemBoxTable__bodyCellInner ">
                           {% include blocks/popup/ms-excluded-toggle.html %}
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
@@ -242,7 +242,7 @@
                   <div class="itemBoxBody">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                        <div class="itemBoxTable__bodyCellInner ">
                           {% include blocks/popup/ms-excluded-toggle.html %}
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
@@ -283,7 +283,7 @@
                   <div class="itemBoxBody">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                        <div class="itemBoxTable__bodyCellInner ">
                           {% include blocks/popup/ms-included-toggle.html %}
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
@@ -325,7 +325,7 @@
                   <div class="itemBoxBody">
                     <ul class="itemBoxTable__bodyRow JS_filterableCell">
                       <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
-                        <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclexcltoggle">
+                        <div class="itemBoxTable__bodyCellInner ">
                           {% include blocks/popup/ms-included-toggle.html %}
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem">
