Cleaning html files, added calendar.js and sublist-closer.js

--- a/_includes/blocks/popup/calendar/ms-calendar-sublist.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-sublist.html
@@ -1,4 +1,4 @@
-<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--dates"  >
+<div class="itemBox itemBox--children itemBox--children-sublist JS_itemBox--calendar"  >
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       {% include blocks/popup/calendar/ms-calendar-header.html %}
