--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -230,7 +230,7 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner ">
                         {% include blocks/popup/ms-included-toggle.html %}
                         <div class="pmx-selector pmx-selector--readonly">
@@ -252,7 +252,7 @@
               {% include blocks/popup/ms-incl-excl-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner ">
                         {% include blocks/popup/ms-included-toggle.html %}
                         <div class="pmx-selector pmx-selector--readonly">
@@ -277,7 +277,7 @@
               {% include blocks/popup/ms-incl-excl-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner ">
                         {% include blocks/popup/ms-excluded-toggle.html %}
                         <div class="pmx-selector pmx-selector--readonly">
@@ -302,7 +302,7 @@
               {% include blocks/popup/ms-incl-excl-filter-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_incl-excl-trigger" style="flex-grow: 1;" data-flex="1">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
                   <div class="itemBoxTable__bodyCellInner ">
                     {% include blocks/popup/ms-excluded-toggle.html %}
                     <div class="pmx-selector pmx-selector--readonly">
