--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -15,6 +15,10 @@
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
 
+<!-- sublist closer -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/sublist-closer.js"></script>
+
+
 <!-- selector -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/selector.js"></script>
 
@@ -31,6 +35,9 @@
 
 <!-- colorpicker -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
+
+<!-- calendar -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/calendar.js"></script>
 
 
 <!-- OUR PLUGINS/COMPONENTS _NOT_ USED IN EVERY PAGE -->
