JS_toggle rename class color

--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -2,8 +2,8 @@
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow JS_bodyRow--suggestion">
-        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+        <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner JS_toggle--color">
             {% include javascript/colorToggle.html color="#0bda51" %}
 
             <div class="pmx-selector pmx-selector--readonly">
@@ -25,8 +25,8 @@
       {% include blocks/popup/ms-tags-colors-color-sublist.html %}
 
       <ul class="itemBoxTable__bodyRow JS_bodyRow--suggestion">
-        <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-          <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+        <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+          <div class="itemBoxTable__bodyCellInner JS_toggle--color">
             {% include javascript/colorToggle.html color="#00bfff" %}
 
             <div class="pmx-selector pmx-selector--readonly">
