--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -244,7 +244,7 @@
                       <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
                         <div class="itemBoxTable__bodyCellInner ">
                           {% include blocks/popup/ms-excluded-toggle.html %}
-                          <div class="pmx-selector  JS_calendar--toggle">
+                          <div class="pmx-selector  JS_toggle--calendar">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
                                 <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">18/03/18</div>
