--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -44,8 +44,8 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody itemBoxBody--sortable ui-sortable">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle ">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color ">
                     {% include javascript/colorToggle.html color="#f4ca16" %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -70,8 +70,8 @@
               </ul>
               {% include blocks/popup/ms-tags-colors-color-sublist.html %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color">
                     {% include javascript/colorToggle.html color="#e30022" %}
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
@@ -97,8 +97,8 @@
               </ul>
               {% include blocks/popup/ms-tags-colors-color-sublist.html %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color">
                     {% include javascript/colorToggle.html color="#0bda51" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
@@ -151,8 +151,8 @@
           <div class="itemBoxTable">
             <div class="itemBoxBody">
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color">
                     {% include javascript/colorToggle.html color="#0bda51" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
@@ -175,8 +175,8 @@
               {% include blocks/popup/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color">
                     {% include javascript/colorToggle.html color="#00bfff" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
@@ -198,8 +198,8 @@
               {% include blocks/popup/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color">
                     {% include javascript/colorToggle.html color="#f4ca16" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
@@ -221,8 +221,8 @@
               {% include blocks/popup/ms-tags-colors-color-sublist.html %}
 
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
-                <li class="itemBoxTable__bodyCell JS_colorselector-trigger" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--colortoggle">
+                <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
+                  <div class="itemBoxTable__bodyCellInner JS_toggle--color">
                     {% include javascript/colorToggle.html color="#e30022" %}
 
                     <div class="pmx-selector pmx-selector--readonly">
