Calendar: changed header and default data

--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -2,7 +2,7 @@
   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
     <div class="itemBoxTable__bodyCellInner">
       <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">←</div>
           </div>
@@ -23,8 +23,8 @@
   </li>
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
     <div class="itemBoxTable__bodyCellInner">
-      <div class="pmx-selector">
-        <div class="pmx-selector__item pmx-selector__item--selected">
+      <div class="pmx-selector pmx-selector--readonly">
+        <div class="pmx-selector__item">
           <div class="pmx-selector__block ">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--field">→</div>
           </div>
